Set z-index to be above fixed navbar but below modal backdrop.

--- a/UI/Navigation/Bootstrap/AccountMenu/css/module.ui.helper.bootstrap.menu.account.css
+++ b/UI/Navigation/Bootstrap/AccountMenu/css/module.ui.helper.bootstrap.menu.account.css
@@ -2,7 +2,7 @@
 	position: absolute;
 	right: 0px;
 	top: 0px;
-	z-index: 1101;
+	z-index: 1035;
 	padding-left: 5px;
 	padding-right: 5px;
 /*	border: 1px solid red;*/
